--- a/package.json
+++ b/package.json
@@ -47,7 +47,11 @@
     "@bitcoinerlab/descriptors": "^0.2.1",
     "@bitcoinerlab/explorer": "file:../explorer",
     "@bitcoinerlab/secp256k1": "^1.0.2",
-    "bitcoinjs-lib": "^6.1.0"
+    "@types/memoizee": "^0.4.8",
+    "bitcoinjs-lib": "^6.1.0",
+    "immer": "^10.0.2",
+    "memoizee": "^0.4.15",
+    "shallow-equal": "^3.1.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.1",
