--- a/package.json
+++ b/package.json
@@ -57,11 +57,13 @@
     "@types/jest": "^29.5.1",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
+    "better-docs": "^2.7.2",
     "bip39": "^3.1.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
+    "jsdoc": "^3.6.11",
     "prettier": "^2.8.7",
     "regtest-client": "^0.2.0",
     "typescript": "^5.0.4"
