--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "types": "dist/index.d.ts",
   "NOTE": "--openHandlesTimeout=4000 is important here because of native fetch leaves open handles for a few seconds even after correct await response - even when all fetch requests are correctly awaited and the responses are consumed, the underlying connections created by Node.js can remain open due to connection pooling, which Jest interprets as an open handle. Alternatively, put this into the code: await new Promise(resolve => setTimeout(resolve, 4000));",
   "scripts": {
-    "docs": "jsdoc -c jsdoc.json",
-    "build:src": "npx tsc --project tsconfig.src.json",
-    "build:test": "npx tsc --project tsconfig.test.json",
+    "docs": "typedoc --plugin typedoc-plugin-missing-exports src/index.ts",
+    "build:src": "tsc --project tsconfig.src.json",
+    "build:test": "tsc --project tsconfig.test.json",
     "build": "npm run build:src && npm run build:test",
     "lint": "eslint --ignore-path .gitignore --ext .ts src/ test/",
     "updatelocalexplorer": "cd ../explorer && npm run build && npm pack && mv *.tgz ../discovery && cd ../discovery && npm uninstall @bitcoinerlab/explorer && npm install ./bitcoinerlab-explorer-*.tgz && rm ./bitcoinerlab-explorer-*.tgz",
@@ -57,15 +57,15 @@
     "@types/jest": "^29.5.1",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
-    "better-docs": "^2.7.2",
     "bip39": "^3.1.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
-    "jsdoc": "^3.6.11",
     "prettier": "^2.8.7",
     "regtest-client": "^0.2.0",
+    "typedoc": "^0.25.0",
+    "typedoc-plugin-missing-exports": "^2.1.0",
     "typescript": "^5.0.4"
   }
 }
