--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@bitcoinerlab/discovery",
   "description": "A TypeScript library for retrieving Bitcoin funds from ranged descriptors, leveraging @bitcoinerlab/explorer for standardized access to multiple blockchain explorers.",
   "homepage": "https://github.com/bitcoinerlab/discovery",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "author": "Jose-Luis Landabaso",
   "license": "MIT",
   "prettier": "@bitcoinerlab/configs/prettierConfig.json",
@@ -21,7 +21,7 @@
     "build:test": "tsc --project ./node_modules/@bitcoinerlab/configs/tsconfig.test.json",
     "build": "npm run build:src && npm run build:test",
     "lint": "eslint --ignore-path .gitignore --ext .ts src/ test/",
-    "updateexplorer": "npm uninstall @bitcoinerlab/explorer && npm install bitcoinerlab/explorer",
+    "updatelocalexplorer": "cd ../explorer && npm install && npm run build && npm pack && mv *.tgz ../discovery && cd ../discovery && npm uninstall @bitcoinerlab/explorer && npm install ./bitcoinerlab-explorer-*.tgz && rm ./bitcoinerlab-explorer-*.tgz",
     "tester": "./node_modules/@bitcoinerlab/configs/scripts/tester.sh",
     "test": "npm run lint && npm run build && npm run tester && NODE_OPTIONS=\"--experimental-fetch\" jest",
     "prepublishOnly": "npm test"
@@ -44,11 +44,11 @@
   ],
   "dependencies": {
     "@bitcoinerlab/descriptors": "^1.0.2",
-    "@bitcoinerlab/explorer": "github:bitcoinerlab/explorer",
+    "@bitcoinerlab/explorer": "^0.1.0",
     "@bitcoinerlab/secp256k1": "^1.0.5",
     "@types/memoizee": "^0.4.8",
     "bitcoinjs-lib": "^6.1.3",
-    "immer": "^10.0.2",
+    "immer": "^9.0.21",
     "memoizee": "^0.4.15",
     "shallow-equal": "^3.1.0"
   },
