--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@bitcoinerlab/discovery",
   "description": "A TypeScript library for retrieving Bitcoin funds from ranged descriptors, leveraging @bitcoinerlab/explorer for standardized access to multiple blockchain explorers.",
   "homepage": "https://github.com/bitcoinerlab/discovery",
-  "version": "1.5.3",
+  "version": "2.0.0",
   "author": "Jose-Luis Landabaso",
   "license": "MIT",
   "prettier": "@bitcoinerlab/configs/prettierConfig.json",
@@ -45,18 +45,20 @@
     "dist"
   ],
   "dependencies": {
-    "@bitcoinerlab/descriptors": "^2.3.4",
-    "@bitcoinerlab/explorer": "^0.4.2",
+    "@bitcoinerlab/descriptors": "^3.0.2",
+    "@bitcoinerlab/explorer": "^1.0.0",
     "@bitcoinerlab/secp256k1": "^1.2.0",
     "@types/memoizee": "^0.4.8",
-    "bitcoinjs-lib": "^6.1.7",
+    "bitcoinjs-lib": "^7.0.1",
     "immer": "^9.0.21",
     "lodash.clonedeep": "^4.5.0",
     "memoizee": "^0.4.15",
-    "shallow-equal": "^3.1.0"
+    "shallow-equal": "^3.1.0",
+    "uint8array-tools": "^0.0.9"
   },
   "devDependencies": {
     "@bitcoinerlab/configs": "^2.0.0",
+    "@bitcoinerlab/miniscript-policies": "^1.1.0",
     "@types/lodash.clonedeep": "^4.5.9",
     "bip39": "^3.1.0",
     "regtest-client": "^0.2.1"
